# OpenCV_Algos

CCT_WB/: CMakeLists.txt
CCT_WB/include/: cct.hpp  cct_lut.hpp  cct_lut_xy.hpp  cct_lut_xy_backup
CCT_WB/src/: main.cpp
Debayer/: CMakeLists.txt
Debayer/images/: fisheye_512x512_u8.raw
Debayer/include/: debayer.hpp
Debayer/src/: main.cpp
